add login logic

--- a/project.config.json
+++ b/project.config.json
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -43,7 +43,19 @@
 				{
 					"id": -1,
 					"name": "用户信息页",
-					"pathName": "pages/user/user"
+					"pathName": "pages/user/user",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "订单页面",
+					"pathName": "pages/order/order",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "购物车页面",
+					"pathName": "pages/trolley/trolley"
 				}
 			]
 		}
